--- a/data/project.json
+++ b/data/project.json
@@ -14,7 +14,7 @@
   "project": {
     "github_org": "tanyaclement",
     "is_private": false,
-    "title": "Latino USA Coverage of Puerto Rico",
+    "title": "Latino USA Coverage of Puerto Rico -- Tanya's Version",
     "description": "This project analyzes Latino USA's coverage of U.S. Occupation in Puerto Rico.",
     "language": "en",
     "slug": "pr-allez",
@@ -22,7 +22,13 @@
     "authors": "Allysa Tellez",
     "media_player": "avannotate",
     "auto_populate_home_page": true,
-    "additional_users": [],
+    "additional_users": [
+      {
+        "login_name": "absempere",
+        "avatar_url": "https://avatars.githubusercontent.com/u/38816173?v=4",
+        "admin": false
+      }
+    ],
     "tags": {
       "tagGroups": [
         {
@@ -878,7 +884,7 @@
       ]
     },
     "created_at": "2025-05-01T10:58:01.343Z",
-    "updated_at": "2025-05-01T11:29:40.984Z",
+    "updated_at": "2025-05-01T11:39:50.923Z",
     "generate_pages_site": true
   },
   "annotations": {},
